# crewai_p2

./: README.md  pyproject.toml
src/p2/: crew.py  main.py
src/p2/config/: agents.yaml  tasks.yaml
